<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.percent.PercentRelativeLayout
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="@dimen/margin">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large"
                android:text="@string/about"/>

        </RelativeLayout>



        <ScrollView
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlToolbar"
            android:layout_above="@+id/btBack"
            android:layout_marginBottom="15dp"
            app:layout_marginLeftPercent="@dimen/view_margin"
            app:layout_marginRightPercent="@dimen/view_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_primary"
                android:textSize="@dimen/text_small" />

        </ScrollView>


        <RelativeLayout
            android:layout_centerVertical="true"
            android:contentDescription="back"
            android:onClick="onViewClick"
            android:id="@+id/btBack"
            android:layout_marginLeft="@dimen/margin"
            android:background="@drawable/back_accent"
            app:layout_widthPercent="25%"
            android:layout_height="@dimen/btn_height"
            >

            <TextView
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_centerVertical="true"
            android:contentDescription="send"
            android:onClick="onViewClick"
            android:id="@+id/btSend"
            android:layout_toRightOf="@+id/btBack"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/back_accent"
            android:layout_height="@dimen/btn_height"
            android:layout_width="match_parent"
            >

            <TextView
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btSend"
            android:layout_marginBottom="15dp"
            android:text="@string/about_secondary"
            android:textSize="@dimen/text_small"
            app:layout_marginLeftPercent="@dimen/view_margin"
            app:layout_marginRightPercent="@dimen/view_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/almayce_dev"
            android:textAlignment="center"
            android:textSize="@dimen/text_small" />

    </android.support.percent.PercentRelativeLayout>

</layout>
