<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.percent.PercentRelativeLayout
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="@dimen/margin">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large"
                android:text="@string/welcome"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_centerVertical="true"
            android:contentDescription="signin"
            android:onClick="onViewClick"
            android:id="@+id/btSignin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/back_accent"
            app:layout_widthPercent="25%"
            android:layout_height="@dimen/btn_height"
            >

            <TextView
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_centerVertical="true"
            android:contentDescription="premium"
            android:onClick="onViewClick"
            android:id="@+id/btPremium"
            android:layout_toRightOf="@+id/btSignin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/back_accent"
            android:layout_height="@dimen/btn_height"
            android:layout_width="match_parent"
            >

            <TextView
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="about"
            android:onClick="onViewClick"
            android:text="@string/about"
            android:textAlignment="center"
            android:textSize="@dimen/text_small" />

    </android.support.percent.PercentRelativeLayout>
</layout>
