<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.percent.PercentRelativeLayout
        android:paddingBottom="@dimen/padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_dialog">

        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="@dimen/margin">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_large" />


            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/back_accent"
                android:src="@drawable/ic_delete_black_24dp" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til1"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/rlPreview"
            android:layout_marginLeft="@dimen/margin"
            android:layout_below="@+id/rlToolbar"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="2"
                android:hint="@string/name"
                android:maxLength="20"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/text_medium" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til2"
            android:layout_height="50dp"
            android:layout_below="@+id/til1"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/rlPreview"
            android:layout_marginLeft="@dimen/margin"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:completionThreshold="2"
                android:hint="@string/description"
                android:maxLength="200"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:textSize="@dimen/text_medium" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_below="@+id/rlToolbar"
            android:id="@+id/rlPreview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_toLeftOf="@+id/ivDone"
            android:background="@drawable/back_accent">

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:scaleType="center"
                android:src="@drawable/ic_photo_camera_black_24dp" />
        </RelativeLayout>



        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/rlPreview"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/back_accent"
            android:src="@drawable/ic_check_black_24dp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/ivDone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/back_accent"
            android:src="@drawable/ic_close_black_24dp" />

    </android.support.percent.PercentRelativeLayout>
</layout>
